# rust-tests

./: .dockerignore  .gitignore  Dockerfile  README.md  README.org  create_exercise.sh  entrypoint.sh  isolate.sh  rust-piscine.org
.github/workflows/: docker-image-on-branch.yml  docker-image-on-master.yml  docker-image.yml  ga-clean-up.yml  ga-image-build-branch.yml  ga-image-build-master.yml  ga-image-sanitize.yml  ga-run-all-rust-test-on-master.yml  ga-run-all-rust-test-on-pr.yml  ga-run-all-rust-test.yml
.ssh/: id_ed25519  id_ed25519.pub
acronym/src/: main.rs
adding_twice/src/: lib.rs
arrange_it/src/: lib.rs
arrays/src/: main.rs
banner/src/: lib.rs
bigger/: Cargo.toml
bigger/src/: lib.rs
blood_types/src/: main.rs
border_cross/: Cargo.toml
borrow/src/: lib.rs  main.rs
borrow_box/src/: lib.rs
borrow_me_the_reference/: Cargo.toml
borrow_me_the_reference/src/: lib.rs
box_it/src/: lib.rs
box_recursion/src/: lib.rs
boxing/: Cargo.toml
boxing/src/: error.rs  lib.rs
boxing_todo/src/: lib.rs
capitalizing/src/: lib.rs
card-suits/: Cargo.toml
card-suits/src/: main.rs
card_deck/src/: lib.rs  main.rs
changes/src/: lib.rs  main.rs
cipher/src/: lib.rs
circle/src/: main.rs
closures/src/: lib.rs  main.rs
collect/src/: main.rs
copy/src/: lib.rs
create_refs/: create_refs.sh
doubtful/: Cargo.toml
error_type/: Cargo.toml
fibonacci2/: Cargo.toml
iterators/: Cargo.toml
pangram/: Cargo.toml
project_motion/: Cargo.toml~50dd54f4db1782ce469f9b551ff8df3d030054f7
sales/: Cargo.toml
scores/: Cargo.toml
smart_pointers/: Cargo.toml
tests/: test_all  test_exercises.sh
tests/commits_stats_test/: Cargo.toml
tests/commits_stats_test/src/: main.rs
tests/matrix_transposition_4by3_test/: Cargo.toml
tests/matrix_transposition_4by3_test/src/: main.rs
tests/name_initials_test/: Cargo.toml
tests/name_initials_test/src/: main.rs
tests/project_motion_test/: Cargo.toml
tests/project_motion_test/src/: lib.rs  main.rs
tests/string_literals_test/: Cargo.toml
tests/string_literals_test/src/: main.rs
vecs_to_map/: Cargo.toml
vector_operations/: Cargo.toml
(+535 files in other folders)
