[package]
name = "name_initials_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
name_initials = { path = "../../solutions/name_initials"}

[dependencies.assert_no_alloc]
version = "1.1.0"
default-features = false
features = ["warn_debug"]
