[package]
name = "string_literals_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_literals = { path = "../../solutions/string_literals"}
# assert_no_alloc = "1.1.0"

[dependencies.assert_no_alloc]
version = "1.1.0"
default-features = false
features = ["warn_debug"]
